社区和我的界面效果图

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="hui">#F0F0F0</color>
     <color name="xianshiqiang_tv_bg">#f1a19f9f</color>
     <color name="xsq_jishi">#efbb5a</color>
+    <color name="biaoti">#F4DD34</color>
 </resources>
