--- a/app/src/main/res/layout/item_horizontallistview.xml
+++ b/app/src/main/res/layout/item_horizontallistview.xml
@@ -2,20 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:clickable="true"
-    android:background="@color/white"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_marginLeft="15dp"
         android:id="@+id/xsq_img"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"
         android:layout_width="150dp"
         android:layout_height="150dp" />
     <RelativeLayout
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
         android:layout_width="150dp"
         android:layout_height="wrap_content">
         <TextView
@@ -31,7 +26,7 @@
             android:text="@string/xsq_jiage_old"
             android:layout_centerVertical="true"
             android:textSize="17sp"
-            android:textColor="@color/hui"
+            android:textColor="@color/xianshiqiang_tv_bg"
             android:layout_alignParentRight="true"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
