--- a/app/src/main/res/layout/fragment_classify_hot.xml
+++ b/app/src/main/res/layout/fragment_classify_hot.xml
@@ -4,19 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:scrollbars="none" >
-    </ListView>
-    <FrameLayout
-        android:id="@+id/float_bar"
+    <com.jinfukeji.taqu.utils.ClassifySwipeRefreshLayout
+        android:id="@+id/classify_swipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
-        <include
-            layout="@layout/classify_hot_floatbar"/>
-    </FrameLayout>
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/classify_hot_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+    </com.jinfukeji.taqu.utils.ClassifySwipeRefreshLayout>
+
 </RelativeLayout>
