--- a/app/src/main/res/layout/item_qqfs.xml
+++ b/app/src/main/res/layout/item_qqfs.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@color/white"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/qqfs_item_img"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/qqfs_item_name_tv"
         android:text="@string/tttt_item_txt"
-        android:layout_marginTop="50dp"
         android:textColor="@color/hei"
+        android:gravity="center_vertical"
+        android:layout_marginStart="15dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="200dp" />
+    <ImageView
+        android:id="@+id/qqfs_item_img"
+        android:layout_toRightOf="@id/qqfs_item_name_tv"
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="150dp"
+        android:layout_height="200dp" />
 </RelativeLayout>
