--- a/app/src/main/res/layout/item_suibiangai.xml
+++ b/app/src/main/res/layout/item_suibiangai.xml
@@ -2,40 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@color/hui"
-    android:clickable="true"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_marginLeft="20dp"
-        android:id="@+id/syg_img"
+        android:id="@+id/sbg_img"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"
-        android:layout_width="250dp"
-        android:layout_height="300dp" />
-    <RelativeLayout
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content">
+        android:layout_width="200dp"
+        android:layout_height="250dp" />
+
         <TextView
-            android:id="@+id/syg_tv_new"
-            android:layout_centerVertical="true"
+            android:id="@+id/sbg_tv_new"
             android:text="@string/xsq_jiage_new"
-            android:textSize="20sp"
-            android:layout_marginLeft="8dp"
+            android:textSize="18sp"
+            android:gravity="center_horizontal"
             android:textColor="@color/xsq_jishi"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/syg_tv_old"
-            android:text="@string/xsq_jiage_old"
-            android:layout_centerVertical="true"
-            android:textSize="17sp"
-            android:textColor="@color/hui"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
 </LinearLayout>
