--- a/app/src/main/res/layout/item_tuijian.xml
+++ b/app/src/main/res/layout/item_tuijian.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/tuijian_item_img"
         android:src="@mipmap/ic_launcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
     <TextView
         android:id="@+id/tuijian_item_name_tv"
         android:text="@string/tttt_item_txt"
-        android:layout_marginTop="50dp"
         android:textColor="@color/hei"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
