几个界面的详情页

--- a/app/src/main/res/layout/activity_tttt.xml
+++ b/app/src/main/res/layout/activity_tttt.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:scrollbars="horizontal"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,7 +7,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/tttt_xiang_banner"
             android:orientation="vertical"
@@ -32,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
-            <RelativeLayout
+            <View
                 android:layout_margin="5dp"
                 android:background="@color/hui"
                 android:layout_width="match_parent"
