--- a/app/src/main/res/layout/fragment_xsqxq_time.xml
+++ b/app/src/main/res/layout/fragment_xsqxq_time.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/renqi_rv"
+        android:id="@+id/xsqxq_time_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
