--- a/app/src/main/res/layout/item_ttxq_renqi_head.xml
+++ b/app/src/main/res/layout/item_ttxq_renqi_head.xml
@@ -2,12 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/renqi_rv"
+    <ImageView
+        android:src="@mipmap/buffer2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="150dp" />
 </LinearLayout>
