--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -260,6 +260,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="30dp" />
                     <TextView
+                        android:id="@+id/xsq_time_tv"
                         android:layout_marginLeft="10dp"
                         android:layout_toEndOf="@id/xsq_changci_tv"
                         android:textSize="17sp"
