--- a/app/src/main/res/layout/item_ttxq_renqi_head.xml
+++ b/app/src/main/res/layout/item_ttxq_renqi_head.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:src="@mipmap/buffer2"
+        android:src="@mipmap/kenan"
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 </LinearLayout>
