--- a/app/src/main/res/layout/item_renqi.xml
+++ b/app/src/main/res/layout/item_renqi.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/renqi_item_img"
-        android:src="@mipmap/buffer4"
-        android:layout_width="200dp"
+        android:src="@mipmap/kenan"
+        android:layout_width="wrap_content"
         android:layout_height="250dp" />
     <TextView
         android:id="@+id/renqi_item_title"
@@ -18,11 +18,11 @@
         android:scrollbars="none"
         android:singleLine="false"
         android:ellipsize="end"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <RelativeLayout
         android:layout_marginStart="5dp"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp">
         <TextView
             android:id="@+id/renqi_item_jiage"
