--- a/app/src/main/res/layout/item_tuijian.xml
+++ b/app/src/main/res/layout/item_tuijian.xml
@@ -7,12 +7,22 @@
     <ImageView
         android:id="@+id/tuijian_item_img"
         android:src="@mipmap/ic_launcher"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/tuijian_item_name_tv"
+        android:id="@+id/tuijian_item_tit_tv"
         android:text="@string/tttt_item_txt"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/hei"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tuijian_item_content"
+        android:text="@string/renqi_item_title"
+        android:singleLine="false"
+        android:ellipsize="none"
+        android:maxLines="10"
+        android:inputType="textMultiLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
