--- a/app/src/main/res/layout/item_xsqxq_time.xml
+++ b/app/src/main/res/layout/item_xsqxq_time.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/xsqxq_time_img"
-        android:src="@mipmap/buffer2"
+        android:src="@mipmap/kenan"
         android:layout_width="130dp"
         android:layout_height="130dp" />
     <LinearLayout
