--- a/app/src/main/res/layout/pop_view_shaixuan.xml
+++ b/app/src/main/res/layout/pop_view_shaixuan.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,14 +27,17 @@
                 android:layout_marginStart="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp" />
-            <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="15dp"
+            <com.jinfukeji.taqu.utils.FlowLayout
                 android:id="@+id/ttqx_xuan_fenlei"
+                app:vertical_spacing="8dp"
+                app:horizontal_spacing="8dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="14dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            </android.support.v7.widget.RecyclerView>
+            </com.jinfukeji.taqu.utils.FlowLayout>
             <TextView
                 android:layout_marginTop="15dp"
                 android:text="@string/ttxq_shaixuan_pinpai"
@@ -45,16 +48,21 @@
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp" />
-            <android.support.v7.widget.RecyclerView
+            <com.jinfukeji.taqu.utils.FlowLayout
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="15dp"
                 android:id="@+id/ttxq_xuan_pinpai"
+                app:horizontal_spacing="8dp"
+                app:vertical_spacing="8dp"
+                android:paddingBottom="15dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
+
+            </com.jinfukeji.taqu.utils.FlowLayout>
         </LinearLayout>
     </ScrollView>
     <LinearLayout
-        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -74,4 +82,4 @@
             android:layout_width="0dp"
             android:layout_height="40dp" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
